[gd_scene load_steps=4 format=3 uid="uid://j8np70asg7j3"]

[ext_resource type="Script" path="res://game/ship.gd" id="1_m0gka"]
[ext_resource type="Texture2D" uid="uid://fwsauqyb2hkl" path="res://assets/sprites/ship.png" id="2_a8bt8"]
[ext_resource type="AudioStream" uid="uid://gx7fnyxbpauc" path="res://assets/sounds/Retro FootStep Krushed Landing 01.wav" id="3_3rvba"]

[node name="Ship" type="Area2D"]
script = ExtResource("1_m0gka")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_a8bt8")
hframes = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-15, -10, -15, -9, -16, -9, -16, -8, -15, -8, -15, -7, -14, -7, -14, -2, -15, -2, -15, -1, -16, -1, -16, 1, -15, 1, -15, 2, -14, 2, -14, 7, -15, 7, -15, 8, -16, 8, -16, 9, -15, 9, -15, 10, -11, 10, -11, 9, -10, 9, -10, 7, -6, 7, -6, 6, -3, 6, -3, 5, -2, 5, -2, 4, -1, 4, -1, 3, 3, 3, 3, 2, 10, 2, 10, 1, 11, 1, 11, -1, 10, -1, 10, -2, 3, -2, 3, -3, -1, -3, -1, -4, -2, -4, -2, -5, -3, -5, -3, -6, -6, -6, -6, -7, -10, -7, -10, -9, -11, -9, -11, -10)

[node name="Tier_1" type="Node2D" parent="."]
position = Vector2(11, 0)

[node name="Tier_2_1" type="Node2D" parent="."]
position = Vector2(6, -6)

[node name="Tier_2_2" type="Node2D" parent="."]
position = Vector2(6, 5)

[node name="Tier_3_1" type="Node2D" parent="."]
position = Vector2(15, -11)

[node name="Tier_3_2" type="Node2D" parent="."]
position = Vector2(15, 10)

[node name="ShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3rvba")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_shoot" binds= [true]]
